[package]
name = "SIGame"
version = "8.8.6"
description = "SIGame"
authors = ["Vladimir Khil"]
license = "GPLv3"
repository = "https://github.com/VladimirKhil/SIOnline"
edition = "2021"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[features]
steam_client = ["dep:steamworks"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
steamworks = { version = "0.11.0", optional = true }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
